= Release notes v. 5.2

== Table of Contents